<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>neo_local_planner2</name>
    <version>1.0.0</version>
    <description>
        Emprical local planner based on pure-pursuit
    </description>
    <author>Max Wittal</author>
    <author>wittal@neobotix.de</author>
    <maintainer email="ros@neobotix.de">Neobotix GmbH</maintainer>
    <maintainer email="wittal@neobotix.de">Max Wittal</maintainer>
    <maintainer email="padmanabhan@neobotix.de">Pradheep Padmanabhan</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/base_local_planner</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
  
    <exec_depend>costmap_converter</exec_depend>
    <exec_depend>costmap_converter_msgs</exec_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav2_core</exec_depend>
    <exec_depend>nav2_costmap_2d</exec_depend>
    <exec_depend>nav2_msgs</exec_depend>
    <exec_depend>nav2_util</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
        <nav2_core plugin="${prefix}/neo_local_planner_plugin.xml" />
    </export>

</package>


